--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.2.0
   device_preview: ^1.3.1
   flutter_bloc: ^9.1.1
+  flutter_otp_text_field: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +66,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
