--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   device_preview: ^1.3.1
   flutter_bloc: ^9.1.1
   flutter_otp_text_field: ^1.5.1+1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
